Add group by and filter to have certain state data

--- a/covid-self-alert.ipynb
+++ b/covid-self-alert.ipynb
@@ -17,6 +17,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# install requirements NOT MANDATORY IF YOU ALREADY HAVE THE LIBS\n",
+    "%pip install pandas --quiet\n",
+    "%pip install memory_profiler --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -287,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +423,7 @@
        "4        NaN     NaN   26938.396264  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -462,19 +482,51 @@
    "source": [
     "# Group dataframe by state, and take in consideration the incident rate (covid cases per 100K persons, to see the trends equally between states)\n",
     "total_mean_us = covid_cases_filtered_df['Incident_Rate'].mean()\n",
-    "print(f'US covid cases of the last {number_of_days} days: {trunc(total_mean_us)} per 100,000 persons')\n",
-    "\n"
+    "print(f'US covid cases of the last {number_of_days} days: {trunc(total_mean_us)} per 100,000 persons')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Douglas\\AppData\\Local\\Temp\\ipykernel_13116\\3878255279.py:5: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  covid_cases_dc_df.mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Lat                  38.897400\n",
+       "Long_               -77.026800\n",
+       "Confirmed        134418.700000\n",
+       "Deaths             1317.833333\n",
+       "Recovered                  NaN\n",
+       "Active                     NaN\n",
+       "Incident_Rate     19046.247320\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_covid_general_statistics(covid_df):\n",
-    "    covid_df = 1\n",
-    "    return"
+    "state_required = 'District of Columbia'\n",
+    "\n",
+    "covid_cases_filtered_df = covid_cases_filtered_df.set_index('Province_State', drop=False)\n",
+    "covid_cases_dc_df = covid_cases_filtered_df.filter(like = state_required, axis=0)\n",
+    "covid_cases_dc_df.mean()\n",
+    "# covid_cases_grouped_df = covid_cases_dc_df.groupby(by=['Province_State'])\n",
+    "\n",
+    "# def get_covid_general_statistics(covid_df):\n",
+    "#     covid_df = 1\n",
+    "#     return"
    ]
   }
  ],
